--- a/frontend/src/Components/NavBar/NavBar.css
+++ b/frontend/src/Components/NavBar/NavBar.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 .NavBar {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 2vmin;
   font-size: 2vmin;
+  background-color: #1F9EBC;
 }
 
 .NavBar {
