--- a/frontend/src/Components/SearchComponent/SearchComponent.css
+++ b/frontend/src/Components/SearchComponent/SearchComponent.css
@@ -6,23 +6,12 @@
     margin-top: 42px;
     margin-bottom: 42px;
     padding-bottom: 37px;
-    background-color: grey;
+    background-color: #D9D9D9;
     border-radius: 10px;
     height: 226px;
 }
 
-select {
-    width: 442px;
-    margin-left: 42px;
-    background-color: white;
-    color:black;
-    border-radius: 10px;
-    height: 40px;
-}
 
-.selContainer {
-    display: flex;
-}
 
 label {
     margin-left: 42px;
