--- a/frontend/src/Components/SearchDocuments/SearchDocuments.css
+++ b/frontend/src/Components/SearchDocuments/SearchDocuments.css
@@ -1,8 +1,7 @@
 
-.airSelect {
+.docSelect {
     width: 442px;
     margin-left: 42px;
-    
     background-color: white;
     color:black;
     border-radius: 0px;
