--- a/frontend/src/Components/PlanWhereForm/PlanWhereForm.css
+++ b/frontend/src/Components/PlanWhereForm/PlanWhereForm.css
@@ -18,3 +18,33 @@
   
   }
 
+
+
+  .shadowSmall {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    width: 190px;
+    padding-top: 10px;
+    padding-left: 18px;
+    padding-bottom: 12px;
+    border-radius: 20px;
+
+
+  }
+
+  .shadowLong {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    width: 350px;
+    padding-top: 10px;
+    padding-left: 18px;
+    padding-bottom: 12px;
+    border-radius: 20px;
+  
+
+
+  }
