--- a/frontend/src/Components/HeadButtons/HeadButtons.css
+++ b/frontend/src/Components/HeadButtons/HeadButtons.css
@@ -9,15 +9,45 @@
     justify-content: space-between;
     text-align: left;
     margin-left: 42px;
+    margin-right: 42px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ededed;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #ededed;
+    padding-right: 0px;
+    border-radius: 50px;
 }
 
-button {
+.headbuttons button {
     
     
     width: 220px;
-    background-color: #1E3769;
-    margin-right: 42px;
+    background-color: #ffffff;
+   color: #1E3769;
     border-radius: 50px;
     border-color: #1E3769;
+    border-width: 2px;
+    height: 44px;
 }
 
+.headbuttons button:hover {
+    background-color: #1E3769; /* light blue */
+    color: #ffffff;
+    height: 44px;
+}
+
+
+  .headbuttons button:active {
+    background-color: #a0a0ff;
+    color: #fff;
+    height: 44px;
+}
+ 
+
+  .headbuttons button.selected {
+    background-color: #1E3769;
+    color: white;
+    border: 2px solid #1E3769;
+    height: 44px;
+  }
