--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -2,5 +2,14 @@
     display: flex;
     background-color: white;
     margin-left: 42px;
+    
 }
 
+h1 {
+    font-size: 28px;
+}
+
+h2 {
+    margin-top: -16px;
+    font-size: 20px;
+}
