--- a/frontend/src/Components/PlanBasicUpdate/PlanBasicUpdate.css
+++ b/frontend/src/Components/PlanBasicUpdate/PlanBasicUpdate.css
@@ -1,14 +1,14 @@
-
-.planBox {
+.shadowMedium {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     margin-right: 20px;
-    width: 190px;
+    width: 270px;
     padding-top: 10px;
     padding-left: 18px;
     padding-bottom: 12px;
     border-radius: 20px;
+    height: 90px;
 
 
   }
