--- a/frontend/src/Components/PlanFlightForm/PlanFlightForm.css
+++ b/frontend/src/Components/PlanFlightForm/PlanFlightForm.css
@@ -1,9 +1,9 @@
-.shadow {
+.shadowMedium {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     margin-right: 20px;
-    width: 190px;
+    width: 220px;
     padding-top: 10px;
     padding-left: 18px;
     padding-bottom: 12px;
