--- a/frontend/src/Components/Resources/Resources.css
+++ b/frontend/src/Components/Resources/Resources.css
@@ -68,3 +68,19 @@
   .plan {
     background-color: grey;
   }
+
+  .custom-link {
+    color: #000000;
+    text-decoration: none;
+  }
+  .custom-link:hover {
+    color: #000000;
+  }
+
+  .buttonRes {
+    background-color: #1E3769;
+    border-radius: 50px;
+    border-color: #1E3769;
+    width: 200px;
+    height: "44px";
+}
