--- a/frontend/src/Components/SearchComponent/SearchComponent.css
+++ b/frontend/src/Components/SearchComponent/SearchComponent.css
@@ -9,6 +9,7 @@
     background-color: #D9D9D9;
     border-radius: 20px;
     height: 226px;
+    width: 1012px;
 }
 
 
@@ -17,16 +18,3 @@ label {
     margin-left: 42px;
 }
 
-.searchbutton {
-   
-    height: 40px;
-    background-color: #1E3769;
-
-}
-
-.button { 
-display: flex;
-justify-content: center;
-align-items: center;
-margin-top: 42px;
-}
